<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:mContext="com.regional.autonoma.corporacion.eva.publicLoginFragment">


    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/public_login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/public_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/public_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/public_user_hint"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/public_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/public_user_password_hint"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionSend"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/public_signin_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/evaColorAccent"
                android:text="@string/CAR_log_in_TextBox"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/register_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/register_text_es" />

            <View
                style="@style/eva.homeLineSeparator"
                android:layout_width="match_parent"
                android:layout_marginTop="16dp" />

            <Button
                android:id="@+id/google_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/GoogleLogInButton"
                android:drawableLeft="@drawable/btn_google_light_normal_hdpi"
                android:drawableStart="@drawable/btn_google_light_normal_hdpi"
                android:text="@string/Google_log_in_TextBox"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/facebook_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/GoogleLogInButton"
                android:drawableLeft="@drawable/fb_f_logo__white_100_margin"
                android:drawableStart="@drawable/fb_f_logo__white_100_margin"
                android:text="@string/Facebook_log_in_TextBox"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold" />



        </LinearLayout>
    </ScrollView>
</LinearLayout>