<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mis_cursos"
        android:id="@+id/textView4"
        android:singleLine="false"
        style="@style/eva.homeTitle" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/mis_cursos_certificados"
            android:id="@+id/textView5"
            android:layout_weight="1"
            style="@style/eva.homeText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-"
            android:id="@+id/textView_certified_courses"
            android:layout_marginRight="5dp"
            style="@style/eva.homeText" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/mis_cursos_en_curso"
            android:id="@+id/textView7"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            style="@style/eva.homeText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-"
            android:id="@+id/textView_pending_courses"
            style="@style/eva.homeText" />
    </LinearLayout>
</LinearLayout>