<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Aprobado"
        android:id="@+id/textView_dialog_result"
        style="@style/eva.evaluationResultTitle"
        android:gravity="center_horizontal" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="10"
            android:id="@+id/textView_dialog_points"
            android:layout_weight="59"
            android:textStyle="bold"
            android:textSize="60dp"
            android:gravity="right"
            android:textColor="#424242" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Puntos"
            android:id="@+id/textView_dialog_points_text"
            style="@style/eva.evaluationResult"
            android:layout_weight="41" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/evaluationMinText"
            android:id="@+id/textView_dialog_minPoints_text"
            style="@style/eva.evaluationResultDetails"
            android:layout_weight="0"
            android:gravity="end" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="not set"
            android:id="@+id/textView_dialog_minPoints"
            style="@style/eva.evaluationResultDetails" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="●"
            android:id="@+id/textView10"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/EvaluationMaxText"
            android:id="@+id/textView_dialog_maxPoints_text"
            style="@style/eva.evaluationResultDetails"
            android:layout_weight="0"
            android:gravity="end" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="not set"
            android:id="@+id/textView_dialog_maxPoints"
            style="@style/eva.evaluationResultDetails" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/evaluationDate"
        android:id="@+id/textView_dialog_date"
        android:gravity="center_horizontal"
        android:singleLine="false" />

</LinearLayout>
